@@ -5,22 +5,22 @@
 #else
 #define	USED
 #endif
-static const char sccsid[] USED = "@(#)dpost.sl	1.40 (gritter) 8/23/05";
-const char creator[] = "Heirloom Documentation Tools - dpost 1.40 (gritter) 8/23/05";
+static const char sccsid[] USED = "@(#)dpost.sl	1.41 (gritter) 8/23/05";
+const char creator[] = "Heirloom Documentation Tools - dpost 1.41 (gritter) 8/23/05";
 /* SLIST */
 /*
 color.c: * Sccsid @(#)color.c	1.3 (gritter) 8/9/05
-comments.h: * Sccsid @(#)comments.h	1.4 (gritter) 8/13/05
+comments.h: * Sccsid @(#)comments.h	1.5 (gritter) 8/23/05
 dev.h: * Sccsid @(#)dev.h	1.3 (gritter) 8/9/05
-dpost.c: * Sccsid @(#)dpost.c	1.33 (gritter) 8/23/05
+dpost.c: * Sccsid @(#)dpost.c	1.34 (gritter) 8/23/05
 dpost.h: * Sccsid @(#)dpost.h	1.3 (gritter) 8/9/05
 dpost_afm.c: * Sccsid @(#)dpost_afm.c	1.1 (gritter) 8/20/05
 draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/9/05
 ext.h: * Sccsid @(#)ext.h	1.3 (gritter) 8/9/05
-gen.h: * Sccsid @(#)gen.h	1.7 (gritter) 8/23/05
+gen.h: * Sccsid @(#)gen.h	1.8 (gritter) 8/23/05
 getopt.c: * Sccsid @(#)getopt.c	1.8 (gritter) 8/2/05
 glob.c: * Sccsid @(#)glob.c	1.3 (gritter) 8/9/05
-misc.c: * Sccsid @(#)misc.c	1.4 (gritter) 8/16/05
+misc.c: * Sccsid @(#)misc.c	1.5 (gritter) 8/23/05
 path.h: * Sccsid @(#)path.h	1.3 (gritter) 8/9/05
 pictures.c: * Sccsid @(#)pictures.c	1.3 (gritter) 8/9/05
 ps_include.c: * Sccsid @(#)ps_include.c	1.5 (gritter) 8/13/05
